# ssptools

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
scripts/: 2POS.py  appendKPaths.py  compareEV.py  plotBS.py  sortPOS.py
ssptools/: BSData.py  compare.py  eigenvalues.py  kpaths.py
ssptools/io/: main.py
