[metadata]
name = ssptools
version = 0.2.2
url = https://github.com/martin-eom/ssptools
author = Martin Keller
description = Various specialized tools for working with the input and output of VASP
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python:requires = >=3.4
install_requires =
	ase
        matplotlib
	numpy
	pymatgen
scripts =
	scripts/2POS.py
	scripts/appendKPaths.py
	scripts/compareEV.py
	scripts/plotBS.py
